--- a/telemed-ui/package.json
+++ b/telemed-ui/package.json
@@ -11,15 +11,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.0.0", 
-    "@angular/cdk": "^19.2.9", 
-    "@angular/common": "^19.2.6",
-    "@angular/compiler": "^19.2.6",
-    "@angular/core": "^19.2.6",
-    "@angular/forms": "^19.2.6",
-    "@angular/platform-browser": "^19.2.6",
-    "@angular/platform-browser-dynamic": "^19.2.6",
-    "@angular/router": "^19.2.6",
+    "@angular/animations": "19.2.6", 
+    "@angular/cdk": "19.2.6", 
+    "@angular/common": "19.2.6",
+    "@angular/compiler": "19.2.6",
+    "@angular/core": "19.2.6",
+    "@angular/forms": "19.2.6",
+    "@angular/platform-browser": "19.2.6",
+    "@angular/platform-browser-dynamic": "19.2.6",
+    "@angular/router": "19.2.6",
     "@swimlane/ngx-charts": "^22.0.0-alpha.1", 
     "jwt-decode": "^4.0.0", 
     "rxjs": "~7.8.2",
@@ -27,9 +27,9 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.7", 
-    "@angular/cli": "^19.2.7",
-    "@angular/compiler-cli": "^19.2.6",
+    "@angular-devkit/build-angular": "19.2.6", 
+    "@angular/cli": "19.2.6",
+    "@angular/compiler-cli": "19.2.6",
     "@types/d3-scale": "^4.0.8", 
     "@types/d3-selection": "^3.0.10",
     "@types/d3-shape": "^3.1.6", 
