--- a/telemed-ui/angular.json
+++ b/telemed-ui/angular.json
@@ -3,21 +3,21 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "telemed-ui": { 
+    "telemed-ui": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "scss" 
+          "style": "scss"
         }
       },
-      "root": "", 
+      "root": "",
       "sourceRoot": "src",
-      "prefix": "app", 
+      "prefix": "app",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/telemed-ui", 
+            "outputPath": "dist/telemed-ui",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -25,45 +25,40 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets" 
+              "src/assets"
             ],
             "styles": [
-              "src/styles.scss" 
+              "src/styles.scss"
             ],
             "scripts": []
           },
           "configurations": {
-            "production": {
-              "budgets": [ 
-                {
-                  "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
-                }
+            "production": { 
+              "budgets": [
+                { "type": "initial", "maximumWarning": "500kb", "maximumError": "1mb" },
+                { "type": "anyComponentStyle", "maximumWarning": "4kb", "maximumError": "6kb" } 
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",    
+                  "with": "src/environments/environment.prod.ts" 
+                }
+              ]
+              
             },
-            "development": {
+            "development": { 
               "buildOptimizer": false,
               "optimization": false,
               "vendorChunk": true,
               "extractLicenses": false,
               "sourceMap": true,
-              "namedChunks": true,
-              "fileReplacements": [ 
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts" 
-                }
-              ]
+              "namedChunks": true
+              
             }
           },
-          "defaultConfiguration": "production"
+          "defaultConfiguration": "production" 
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
@@ -75,34 +70,14 @@
               "buildTarget": "telemed-ui:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development" 
         },
-        "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
-          "options": {
-            "buildTarget": "telemed-ui:build"
-          }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "polyfills": "src/polyfills.ts", 
-            "tsConfig": "tsconfig.spec.json",
-            "inlineStyleLanguage": "scss",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.scss"
-            ],
-            "scripts": []
-          }
-        }
+        "extract-i18n":
+        "test" 
       }
     }
   },
   "cli": {
-    "analytics": false 
+    "analytics": false
   }
 }
